# mlopsHW

./: .gitignore  .gitignore.swp  README.md  pyproject.toml
.dvc/: config
data/: .gitignore  predictions.csv  test.csv.dvc  train.csv.dvc  trained_model.sav
model/: .gitignore  graph.py  infer.py  run_server.py  train.py  trained_model.sav
model/config/: config.yaml
model/outputs/2024-02-26/21-27-39/.hydra/: config.yaml  hydra.yaml
model/outputs/2024-02-26/21-27-46/.hydra/: hydra.yaml
model/outputs/2024-02-26/21-29-04/.hydra/: hydra.yaml
model/outputs/2024-02-26/22-00-15/.hydra/: hydra.yaml
model/outputs/2024-02-26/22-00-29/.hydra/: hydra.yaml
model/outputs/2024-02-26/22-09-57/.hydra/: hydra.yaml
model/outputs/2024-02-26/22-52-31/.hydra/: hydra.yaml
model/outputs/2024-02-26/22-53-22/.hydra/: hydra.yaml
model/outputs/2024-02-26/22-54-27/.hydra/: hydra.yaml
model/outputs/2024-02-26/22-56-32/.hydra/: config.yaml  hydra.yaml
model/outputs/2024-02-26/22-57-24/.hydra/: hydra.yaml
model/outputs/2024-02-26/22-58-22/.hydra/: hydra.yaml
model/outputs/2024-02-26/22-59-15/.hydra/: hydra.yaml
model/outputs/2024-02-26/22-59-36/.hydra/: hydra.yaml
model/outputs/2024-02-26/23-00-20/.hydra/: config.yaml  hydra.yaml
model/outputs/2024-02-26/23-00-30/.hydra/: hydra.yaml
model/outputs/2024-02-26/23-01-20/.hydra/: hydra.yaml
model/outputs/2024-02-26/23-03-31/.hydra/: hydra.yaml
triton/: Dockerfile  client.py  docker-compose.yaml
triton/model_repository/titanic_classifier/: config.pbtxt
triton/model_repository/titanic_classifier/1/: .gitignore  model.onnx.dvc
