[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["Artyom <amordashov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
joblib = "^1.3.2"
pandas = "^2.2.0"
scikit-learn = "^1.4.1.post1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
